<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        grid:rowCount="8"
        grid:columnCount="3"
        grid:orientation="horizontal"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/network_setting"
            android:id="@+id/settings"
            grid:layout_rowWeight="1"
            grid:layout_columnSpan="3"
            grid:layout_gravity="center"
            android:textSize="24dp" />

        <TextView
            android:text="@string/ros_master_ip"
            android:id="@+id/textViewIP"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:gravity="center_vertical|right"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editIP"
            android:text="@string/default_master_ip"
            android:inputType="phone"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:textSize="15dp" />

        <Button
            android:text="@string/ping"
            android:id="@+id/pingButton"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:textSize="12dp" />

        <TextView
            android:text="@string/ros_master_port"
            android:id="@+id/textViewPort"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:gravity="center_vertical|right"
            android:textSize="15dp" />

        <EditText
            android:inputType="number"
            android:text="@string/default_master_port"
            android:id="@+id/editPort"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:textSize="15dp" />

        <Button
            android:text="@string/test"
            android:id="@+id/testButton"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:textSize="12dp" />

        <TextView
            android:text="@string/ros_hostname_ip"
            android:id="@+id/textDeviceIP"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:gravity="center_vertical|right"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/hostNameIP"
            android:text="@string/default_hostname_ip"
            android:inputType="phone"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:textSize="15dp" />

        <Button
            android:text="@string/change_hostname_ip"
            android:id="@+id/changeIP"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:textSize="12dp" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/options"
            android:id="@+id/options"
            grid:layout_columnSpan="3"
            grid:layout_gravity="center"
            grid:layout_rowWeight="1"/>

        <TextView
            android:text="@string/stream"
            android:id="@+id/streamText"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:gravity="center_vertical|right"
            android:textSize="14dp" />

        <RadioGroup
            android:id="@+id/streamPref"
            android:orientation="horizontal"
            grid:layout_columnSpan="2"
            grid:layout_rowWeight="1"
            android:gravity="center_vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mjpeg"
                android:id="@+id/streamMjpeg" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ros_cimage"
                android:id="@+id/streamROSCImage"
                android:checked="true" />

        </RadioGroup>

        <TextView
            android:text="@string/control"
            android:id="@+id/controlText"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:gravity="center_vertical|right"
            android:textSize="14dp" />

        <RadioGroup
            android:id="@+id/controlPref"
            android:orientation="horizontal"
            grid:layout_columnSpan="2"
            grid:layout_rowWeight="1"
            android:gravity="center_vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/udp"
                android:id="@+id/controlUDP"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tcp"
                android:id="@+id/controlTCP"
                android:checked="true"/>

        </RadioGroup>



        <Button
            android:text="@string/setup"
            android:id="@+id/calibrationButton"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:visibility="gone" />

        <Button
            android:text="@string/camera"
            android:id="@+id/cameraButton"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            android:visibility="gone" />



    </android.support.v7.widget.GridLayout>

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"

        grid:alignmentMode="alignBounds"
        grid:rowOrderPreserved="false"
        grid:useDefaultMargins="true"
        grid:rowCount="5"
        grid:columnCount="2"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/interfaces"
            android:id="@+id/interfaces"
            grid:layout_rowWeight="1"
            grid:layout_columnSpan="2"
            grid:layout_gravity="center"
            android:textSize="24dp" />

        <TextView
            android:layout_width="0dp"
            android:text="@string/interface_gamepad_name"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/textViewGamepad"
            android:gravity="center"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:text="@string/interface_screenjoystick_name"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/textViewController"
            android:gravity="center"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/interface_gamepad"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="5"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/imageViewPreviewGamepad" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:src="@drawable/interface_screenjoystick"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="5"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/imageViewPreviewController" />

        <TextView
            android:layout_width="0dp"
            android:text="@string/interface_directmanipulation_name"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/textViewDragging"
            android:gravity="center"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:text="@string/interface_leapmotion_name"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/textViewLeapMotion"
            android:gravity="center"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/interface_directmanipulation"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="5"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/imageViewPreviewDragging" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/interface_leapmotion"
            grid:layout_columnWeight="1"
            grid:layout_rowWeight="5"
            grid:layout_gravity="fill_horizontal"
            android:id="@+id/imageViewPreviewLeapMotion"
            android:visibility="invisible" />

    </android.support.v7.widget.GridLayout>


</LinearLayout>
