<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context=".GamepadInterface"
    android:orientation="horizontal">

    <uniandes.disc.imagine.android_hri.mobile_interaction.utils.MjpegView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mjpegView"
        android:visibility="visible" />

    <org.ros.android.view.RosImageView
        android:id="@+id/streamingView"
        android:src="@drawable/loading_wide"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:clickable="false" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/target_cool"
        android:id="@+id/targetView"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="120dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/virtual_joystick_pos"
        android:src="@drawable/stick_4c"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:alpha="0.4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/position_control"
        android:id="@+id/positionTextView"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ff3f3f3f"
        android:layout_gravity="center_vertical"
        android:layout_alignTop="@+id/virtual_joystick_pos"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/virtual_joystick_pos" />

    <ImageView
        android:id="@+id/virtual_joystick_rot"
        android:src="@drawable/stick_4c"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:alpha="0.4"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rotation_control"
        android:id="@+id/rotationTextView"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ff3f3f3f"
        android:layout_gravity="center_vertical"
        android:layout_alignTop="@+id/virtual_joystick_rot"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/virtual_joystick_rot"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/virtual_trigger_close"
        android:src="@drawable/trigger_4c"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:alpha="0.4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/grasping_close"
        android:id="@+id/triggerCloseTextView"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ff3f3f3f"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/virtual_trigger_close"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/virtual_trigger_close" />

    <ImageView
        android:id="@+id/virtual_trigger_open"
        android:src="@drawable/trigger_4c"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:alpha="0.4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/grasping_open"
        android:id="@+id/triggerOpenTextView"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ff3f3f3f"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/virtual_trigger_open"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/virtual_trigger_open" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/emergency_on"
        android:textOff="@string/emergency_off"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/emergencyButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:textStyle="bold"
        android:visibility="gone" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/target_cool"
        android:id="@+id/targetCenter"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.7"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/device"
        android:id="@+id/deviceView"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/targetCenter"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/virtual_joystick_pos" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sim_control"
        android:id="@+id/radioMSIM"
        android:checked="true"
        android:clickable="false"
        android:layout_below="@+id/deviceView"
        android:layout_alignParentLeft="true"
        android:enabled="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p3dx1_control"
        android:id="@+id/radioP3DX1"
        android:checked="false"
        android:layout_below="@+id/radioMSIM"
        android:layout_alignParentLeft="true"
        android:enabled="true"
        android:clickable="false" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view"
        android:id="@+id/cameraView"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/targetCenter"
        android:layout_alignParentRight="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera1_name"
        android:id="@+id/radioSimulator"
        android:checked="true"
        android:clickable="false"
        android:layout_below="@+id/cameraView"
        android:layout_alignLeft="@+id/cameraView"
        android:enabled="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera2_name"
        android:id="@+id/radioTopDown"
        android:checked="false"
        android:layout_below="@+id/radioSimulator"
        android:layout_alignLeft="@+id/radioSimulator"
        android:enabled="true"
        android:clickable="false"
        android:alpha="0.3" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera3_name"
        android:id="@+id/radioFirstPerson"
        android:checked="false"
        android:layout_below="@+id/radioTopDown"
        android:layout_alignLeft="@+id/radioTopDown"
        android:enabled="true"
        android:clickable="false"
        android:alpha="0.3" />

</RelativeLayout>